samples/_failures_safe/1761485488_d318b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f9f21ca.c: In function ‘display_statistics’:
./samples/SAFE/__tmp_5f9f21ca.c:157:12: error: missing terminating " character
  157 |     printf("Total entries processed: %
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5f9f21ca.c:157:5: error: expected expression at end of input
  157 |     printf("Total entries processed: %
      |     ^~~~~~
./samples/SAFE/__tmp_5f9f21ca.c:157:5: error: expected declaration or statement at end of input
